hphp/hack/test/typecheck/strict_switch/bool_int.php.exp
File "bool_int.php", line 20, characters 11-12:
`switch` statement nonexhaustive; at least the following cases are missing: `default`, `int` (Typing[4019])
  File "bool_int.php", line 20, characters 11-12:
  only unions and intersections of bool, null and enums can be switched on without a default
